--- a/cart.html
+++ b/cart.html
@@ -209,7 +209,7 @@
     </div>
 
     <!--弹出框-->
-    <div class="jd_win">
+    <div class="jd_win" style="display:none">
         <div class="jd_win_box">
             <div class="jd_win_box_text">
                 您确认删除这件商品吗？
