--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                    <a href="#" class="p_right border_left"><img src="images/cp4.jpg" alt=""/></a>
                    <a href="#" class="p_left border_bot"><img src="images/cp5.jpg" alt=""/></a>
                    <a href="#" class="p_left "><img src="images/cp6.jpg" alt=""/></a>
-
                </div>
            </section>
        </main>
    </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
