新增手机端轮播图效果
用css3中的transition过渡，和transform转换中的translateX（-X）位移实现的，改变整个ul的x位置

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
        <!-- 轮播图-->
        <div class="jd_banner">
            <ul>
+               <li><img src="images/l8.jpg" alt=""/></li>
                <li><img src="images/l1.jpg" alt=""/></li>
                <li><img src="images/l2.jpg" alt=""/></li>
                <li><img src="images/l3.jpg" alt=""/></li>
@@ -34,9 +35,10 @@
                <li><img src="images/l6.jpg" alt=""/></li>
                <li><img src="images/l7.jpg" alt=""/></li>
                <li><img src="images/l8.jpg" alt=""/></li>
+               <li><img src="images/l1.jpg" alt=""/></li>
            </ul>
            <ul>
-               <li></li>
+               <li class="now"></li>
                <li></li>
                <li></li>
                <li></li>
